--- a/docs/appslots/applications/deluge.mdx
+++ b/docs/appslots/applications/deluge.mdx
@@ -40,15 +40,12 @@ import TabItem from "@theme/TabItem";
     {label: 'Arch Linux', value: 'arch'},
   ]}>
   <TabItem value="windows">
- 
-
 
 Grab the most recent version from [here](https://ftp.osuosl.org/pub/deluge/windows/?C=M;O=D) and save it to a common location (i.e. Downloads).
 Run the installer and follow the prompts.
 
   </TabItem>
   <TabItem value="macos">
-
 
 You can grab a pre-2.0 version of deluge [here](https://ftp.osuosl.org/pub/deluge/mac_osx/?C=M;O=D), or install it via `brew` like so
 
@@ -214,6 +211,39 @@ There are a wide array of plugins available for Deluge. You can find a list of t
 :::note
 Not all plugins have a web-ui component. You will likely need to install and manage the options for most of the plugins on the prior page with the [thin client](#thin-client-recommended).
 :::
+
+### Reannounce Script
+
+On our dedicated machines, an included feature is a reannounce script for racing using Deluge. You can replicate this behaviour on the app range by using the respective scripts to your Deluge version. If you cannot remember what version of Deluge you have installed, consider using `cat ~/.install/.deluge.lock` to get your currently installed version of the application.
+
+<Tabs
+  defaultValue="d1"
+  values={[
+    {label: 'Deluge 1.3.x', value: 'd1'},
+    {label: 'Deluge 2.0.x', value: 'd2'}
+  ]}>
+
+<TabItem value="d1">
+
+The Deluge 1.3.x reannounce script can be added to the client by running the command below, then setting the path to the script to `/home/<yourusername>/1.sh`
+
+```bash main
+curl -sL https://docs.seedbox.io/static/scripts/1.sh -o ~/1.sh && chmod +x ~/1.sh
+```
+
+</TabItem>
+
+<TabItem value="d2">
+
+The Deluge 2.0.x reannounce script can be added to the client by running the command below, then setting the path to the script to `/home/<yourusername>/2.sh`
+
+```bash main
+curl -sL https://docs.seedbox.io/static/scripts/2.sh -o ~/2.sh && chmod +x ~/2.sh
+```
+
+</TabItem>
+
+</Tabs>
 
 ## Connect to other clients
 
