docs: update to hbd brand and links

--- a/docs/appslots/applications/basics.mdx
+++ b/docs/appslots/applications/basics.mdx
@@ -4,7 +4,7 @@ title: Application Basics
 sidebar_label: Basics
 ---
 
-In the following section, you can learn more about the applications offered by the Seedbox.io installer, how to install them and configure them for use with other applications provided by box.
+In the following section, you can learn more about the applications offered by the HostingByDesign installer, how to install them and configure them for use with other applications provided by box.
 
 :::caution
 Many applications offer a significant array of configuration options. Most of them won't be covered in the following pages. Rather, you should read the wikis and manual pages for the applications in question to understand the full breadth of the options available.
