--- a/docs/appslots/applications/plex-tunnel.mdx
+++ b/docs/appslots/applications/plex-tunnel.mdx
@@ -36,7 +36,7 @@ If you don't supply a root or sudo user, you'll have to change the configuration
 
 ## How to Access
 
-Once the tunnel has been created, you'll no longer be able to access Plex from the original hostname of your Seedbox.io slot. You'll only be able to access it from the plex.tv dashboard or directly from the VPS (e.g. `https://<VPSIP>:32400`)
+Once the tunnel has been created, you'll no longer be able to access Plex from the original hostname of your HostingByDesign slot. You'll only be able to access it from the plex.tv dashboard or directly from the VPS (e.g. `https://<VPSIP>:32400`)
 
 ## Service Management
 
