--- a/docs/appslots/applications/plex.mdx
+++ b/docs/appslots/applications/plex.mdx
@@ -31,11 +31,11 @@ On Windows, under PuTTY, you can paste with a right-click.
 On Linux, you'll need to use Control-Shift-V.
 :::
 
-Installation will take a few moments. Once it's done, you'll receive a notice that the installation is complete and the installer will let you know where you can access the application. (e.g. `https://app02.seedbox.io:7777/web`).
+Installation will take a few moments. Once it's done, you'll receive a notice that the installation is complete and the installer will let you know where you can access the application. (e.g. `https://app02.hostingby.design:7777/web`).
 
 ## How to Access
 
-As above, the Plex installer will output your personal port access at the end of the installation. Since Plex doesn't have outstanding support for reverse proxies, access to Plex will be through the port it was setup on. For instance, `7777`. To access the application directly, you can use the link `https://serverhostname.io:port/web`, or, for example: `https://app02.seedbox.io:7777/web`
+As above, the Plex installer will output your personal port access at the end of the installation. Since Plex doesn't have outstanding support for reverse proxies, access to Plex will be through the port it was setup on. For instance, `7777`. To access the application directly, you can use the link `https://serverhostname.io:port/web`, or, for example: `https://app02.hostingby.design:7777/web`
 
 :::tip Tip
 If you forgot your personalized port, you can always access Plex from the "Plex" link on your dashboard, or you can re-discover your port programatically with the command `cat ~/.install/.plex.lock`. However, as long as your server has been claimed, it should always be viewable from your Plex Web dashboard at https://app.plex.tv/dashboard
