--- a/docs/appslots/applications/qbittorrent.mdx
+++ b/docs/appslots/applications/qbittorrent.mdx
@@ -12,7 +12,7 @@ qBittorrent is an open-source alternative utorrent. It's written in C++ and uses
 box install qbittorrent
 ```
 
-This will install a tuned qBittorrent client from Seedbox.io.
+This will install a tuned qBittorrent client from HostingByDesign.
 
 ## How to Access
 
