--- a/docs/getting-started/login-details.mdx
+++ b/docs/getting-started/login-details.mdx
@@ -6,7 +6,7 @@ sidebar_label: Login details
 
 When you signup for our services, you will be asked to insert your email along with a password of your choosing, do note that this login combo is only valid for our clientarea and not valid for any services purchased from us.
 
-The login details for our services are sent via email to the email account that are inserted into the signup form, if you didn't get this email please login to your clientarea on this link: https://panel.seedbox.io/clientarea.php
+The login details for our services are sent via email to the email account that are inserted into the signup form, if you didn't get this email please login to your clientarea on this link: https://panel.hostingby.design/clientarea.php
 
 From there, you can click on your name at the top right corner and then click on your email history like shown below:
 
