--- a/docs/shared-storage/administration/upgrade-seedbox.mdx
+++ b/docs/shared-storage/administration/upgrade-seedbox.mdx
@@ -6,7 +6,7 @@ sidebar_label: Upgrade seedbox
 
 It is possible to upgrade our seedboxes on the fly without changing the server or location, follow this guide to go through the upgrade.
 
-First off, [login to your clientarea](https://panel.seedbox.io/clientarea.php?action=services) and click on your service:
+First off, [login to your clientarea](https://panel.hostingby.design/clientarea.php?action=services) and click on your service:
 
 ![](http://i.imgur.com/RmoPc8Y.png)
 
