--- a/docs/shared-storage/applications/kodi.mdx
+++ b/docs/shared-storage/applications/kodi.mdx
@@ -17,7 +17,7 @@ Steps to set it up:
 
 ```plaintext
 Protocol: Web server directory (HTTPS)
-Server address: XXX.seedbox.io (XXX is to be replaced with your seedbox username)
+Server address: XXX.hostingby.design (XXX is to be replaced with your seedbox username)
 Remote path: files
 Username: <seedbox username>
 Password: <seedbox password>
