--- a/docs/shared-storage/file-access/bouncer.mdx
+++ b/docs/shared-storage/file-access/bouncer.mdx
@@ -8,7 +8,7 @@ If you are having issues with slow download speeds via FTP, using one of our bou
 
 We recommend using FileZilla, and starting here to get the basics of the program: [Connect to FTP](/shared-storage/file-access/connect-ftp)
 
-To start using our bouncer services, first [login to your client area](https://panel.seedbox.io/clientarea.php?action=services) and click on your service.
+To start using our bouncer services, first [login to your client area](https://panel.hostingby.design/clientarea.php?action=services) and click on your service.
 
 :::caution
 Please note that the screenshot points to the URL of the service, do not click on the URL but instead on the blank space next to the URL - Or click on the "Services" tab right above the service, and then click on the "Active" button.
