--- a/docs/shared-storage/troubleshooting/reroute.mdx
+++ b/docs/shared-storage/troubleshooting/reroute.mdx
@@ -6,7 +6,7 @@ sidebar_label: Reroute data (NFOrce)
 
 If you are experiencing slow FTP speeds to your home PC, there could be loss somewhere along the line. This guide will show you how to setup a reroute,
 
-[Login to your clientarea](https://panel.seedbox.io/clientarea.php?action=services) and click on the "Services" tab at the top bar:
+[Login to your clientarea](https://panel.hostingby.design/clientarea.php?action=services) and click on the "Services" tab at the top bar:
 
 ![](https://i.imgur.com/X3UTnMt.png)
 
