--- a/docs/shared-storage/troubleshooting/slow-ftp.mdx
+++ b/docs/shared-storage/troubleshooting/slow-ftp.mdx
@@ -10,7 +10,7 @@ You can solve it in a number of ways, the easiest and fastest way is to use File
 If you use FileZilla, make sure you are using as many connections as possible, by going into settings and setting it to 10:
 ![](https://seedbox.io/img/fz6.png)
 
-If this does not work, we offer a FTP Bouncer service, which will send the data from our servers over high capacity links to a server which is located closer to you. You can find the description on how to use our bouncer servers here: https://panel.seedbox.io/index.php?rp=/knowledgebase/33/How-to-use-our-bouncer-servers.html
+If this does not work, we offer a FTP Bouncer service, which will send the data from our servers over high capacity links to a server which is located closer to you. You can find the description on how to use our bouncer servers here: https://panel.hostingby.design/index.php?rp=/knowledgebase/33/How-to-use-our-bouncer-servers.html
 
 We currently have bouncer services in:
 
