--- a/docs/appslots/applications/deluge.mdx
+++ b/docs/appslots/applications/deluge.mdx
@@ -228,7 +228,7 @@ On our dedicated machines, an included feature is a reannounce script for racing
 The Deluge 1.3.x reannounce script can be added to the client by running the command below, then setting the path to the script to `/home/<yourusername>/1.sh`
 
 ```bash main
-curl -sL https://docs.seedbox.io/static/scripts/1.sh -o ~/1.sh && chmod +x ~/1.sh
+curl -sL https://docs.hostingby.design/static/scripts/1.sh -o ~/1.sh && chmod +x ~/1.sh
 ```
 
 </TabItem>
@@ -238,7 +238,7 @@ curl -sL https://docs.seedbox.io/static/scripts/1.sh -o ~/1.sh && chmod +x ~/1.s
 The Deluge 2.0.x reannounce script can be added to the client by running the command below, then setting the path to the script to `/home/<yourusername>/2.sh`
 
 ```bash main
-curl -sL https://docs.seedbox.io/static/scripts/2.sh -o ~/2.sh && chmod +x ~/2.sh
+curl -sL https://docs.hostingby.design/static/scripts/2.sh -o ~/2.sh && chmod +x ~/2.sh
 ```
 
 </TabItem>
