--- a/docs/shared-storage/administration/renewal.mdx
+++ b/docs/shared-storage/administration/renewal.mdx
@@ -10,4 +10,4 @@ The renewed service starts counting from the invoice due time, and not from the 
 On the next day after the due day, if your invoice is not paid, your account will be suspended and you will receive again a reminder email. 7 days after your account is suspended, all of your data will be erased. We cannot restore terminated accounts.
 We encourage our clients, to send us a cancellation request from within their client area, letting us know that will not be renewing their service if they wish so.
 
-If you have a problem with your payment, and you require an extension of time, [please let us know](https://panel.seedbox.io/submitticket.php?step=2&deptid=1), and we will be happy to accommodate you.
+If you have a problem with your payment, and you require an extension of time, [please let us know](https://panel.hostingby.design/submitticket.php?step=2&deptid=1), and we will be happy to accommodate you.
