docs(community): update links

--- a/docs/appslots/community-applications/filebrowser.mdx
+++ b/docs/appslots/community-applications/filebrowser.mdx
@@ -14,10 +14,10 @@ import Community from "../snippets/community.mdx";
 
 ## Installation
 
-This installer will use your existing username and a randomly generated password (or one of your choice) to secure filebrowser. Please consider [reading the script](https://gist.github.com/brettpetch/b7aeea697e47eca81bf4761be14651d9) before running it. The installer will output a port number with how to access the filebrowser install on completion. Please remember this number.
+This installer will use your existing username and a randomly generated password (or one of your choice) to secure filebrowser. Please consider [reading the script](https://github.com/brettpetch/hosted-scripts/raw/master/filebrowser.sh) before running it. The installer will output a port number with how to access the filebrowser install on completion. Please remember this number.
 
 ```bash
-bash <(curl -sL https://gist.github.com/brettpetch/b7aeea697e47eca81bf4761be14651d9/raw/2eb9e9ae792d6a56e8feb58021b5f35510438771/filebrowser.sh)
+bash <(curl -sL "https://github.com/brettpetch/hosted-scripts/raw/master/filebrowser.sh")
 ```
 
 :::tip
