--- a/docs/appslots/community-applications/lounge.mdx
+++ b/docs/appslots/community-applications/lounge.mdx
@@ -14,10 +14,10 @@ import Community from "../snippets/community.mdx";
 
 ## Installation
 
-This installer will use your existing username and a password of your choice to secure The Lounge. Please consider [reading the script](https://gist.github.com/brettpetch/7945e3620503eaf3b6fcce44529ecc8f) before running it. The installer will output a port number with how to access The Lounge install on completion. Please remember this number.
+This installer will use your existing username and a password of your choice to secure The Lounge. Please consider [reading the script](https://github.com/brettpetch/hosted-scripts/raw/master/lounge.sh) before running it. The installer will output a port number with how to access The Lounge install on completion. Please remember this number.
 
 ```bash
-bash <(curl -sL https://gist.github.com/brettpetch/7945e3620503eaf3b6fcce44529ecc8f/raw/ba4c9930b0f5261c0af8efecf94e17efde2e85a2/lounge.sh)
+bash <(curl -sL https://github.com/brettpetch/hosted-scripts/raw/master/lounge.sh)
 ```
 
 :::tip
