--- a/docs/appslots/community-applications/overseerr.mdx
+++ b/docs/appslots/community-applications/overseerr.mdx
@@ -16,10 +16,10 @@ import Community from "../snippets/community.mdx";
 
 ## Installation
 
-Before installation, please consider reading the installer script. You can read it on it's [github gist page](https://gist.github.com/brettpetch/542d375087820db3d04d54e006be260a). You can run the script by using the following command:
+Before installation, please consider reading the installer script. You can read it on it's [github gist page](https://github.com/brettpetch/hosted-scripts/raw/master/overseerr.sh). You can run the script by using the following command:
 
 ```bash
-bash <(curl -sL https://gist.github.com/brettpetch/542d375087820db3d04d54e006be260a/raw/7dcc2c12032637f3b527f7317c89245b8ec85059/overseerr.sh)
+bash <(curl -sL https://github.com/brettpetch/hosted-scripts/raw/master/overseerr.sh)
 ```
 
 :::tip
