docs(storage): bouncer ftp update images

--- a/docs/shared-storage/file-access/bouncer.mdx
+++ b/docs/shared-storage/file-access/bouncer.mdx
@@ -14,26 +14,31 @@ To start using our bouncer services, first [login to your client area](https://p
 Please note that the screenshot points to the URL of the service, do not click on the URL but instead on the blank space next to the URL - Or click on the "Services" tab right above the service, and then click on the "Active" button.
 :::
 
-![](http://i.imgur.com/RmoPc8Y.png)
+1. Go to the panel
+ 
+ ![bouncers 1](../../assets/legacy-bouncer-servers-1.png)
 
-Once there, click on the option FileZilla configuration at the left panel:
+2. Once there, click on the option **Download FileZilla configuration** in the **Actions** panel to the left. This will start the download of an XML file, this includes the bouncers and all needed information.
 
-![](http://i.imgur.com/D4hDVGG.png)
+ ![bouncers 2](../../assets/legacy-bouncer-servers-2.png)
 
-This will start the download of an XML file, this includes the bouncers and all needed information, proceed to your FileZilla program:
 
-![](http://i.imgur.com/iVwwvnM.png)
+3. In FileZilla, in the top menu click **File -> Import**:
 
-Once you click here, a popup window will appear, browse to the downloaded XML file and click OPEN.
+ ![bouncers 3](../../assets/legacy-bouncer-servers-3.png)
 
-![](http://i.imgur.com/UdGjReB.png)
+4. Once you click here, a popup window will appear, browse to the downloaded XML file and click **Open**.
 
-Make sure that the "Site Manager entries" are ticked and then click OK.
+ ![bouncers 4](../../assets/legacy-bouncer-servers-4.png)
 
-To start using the bouncer, simply click on the little arrow next to the sitemanager:
+5. Make sure that the **Site Manager entries** are ticked and then click **Ok**.
 
-![](http://i.imgur.com/c1y2Zt9.png)
+ To start using the bouncer, simply click on the little arrow next to the sitemanager:
+ 
+ This will reveal all of our bouncer servers, simply pick the one closest to your location and you should see an improvement over the previous setup.
 
-This will reveal all of our bouncer servers, simply pick the one closest to your location and you should see an improvement over the previous setup.
+ ![bouncers 5](../../assets/legacy-bouncer-servers-5.png)
 
+:::note
 Do note, that even over the bouncer servers the FTP speeds may by a bit shaky, especially if you are in California or Australia where the data have to travel great distances as there is lots of unknown factors outside our network that we cannot control.
+:::
