docs: update all broken panel links

--- a/docs/getting-started/introduction-c.mdx
+++ b/docs/getting-started/introduction-c.mdx
@@ -10,13 +10,13 @@ When you signup for a seedbox with us, you will also get a login that allows you
 
 ### First login
 
-Below, you can see a sample of what you will see when you login to your client area at panel.hostingby.design
+Below, you can see a sample of what you will see when you login to your client area at my.hostingby.design
 
 ![](http://i.imgur.com/e1vLHyY.png)
 
 From this view, you have total control over most of your options, you can directly learn more about your service, you can see your custom quotes, invoices, and a list of your recent tickets.
 
-It is also from this page that you [submit a new ticket](https://panel.hostingby.design/submitticket.php) in case you have any issues, we do however appreciate if you read through our [knowledge base](https://docs.hostingby.design) before contacting support as most of the common issues are listed there.
+It is also from this page that you [submit a new ticket](https://my.hostingby.design/submitticket.php) in case you have any issues, we do however appreciate if you read through our [knowledge base](https://docs.hostingby.design) before contacting support as most of the common issues are listed there.
 
 Finding the knowledgebase:
 
