--- a/docs/shared-storage/administration/upgrade-seedbox.mdx
+++ b/docs/shared-storage/administration/upgrade-seedbox.mdx
@@ -6,7 +6,7 @@ sidebar_label: Upgrade seedbox
 
 It is possible to upgrade our seedboxes on the fly without changing the server or location, follow this guide to go through the upgrade.
 
-First off, [login to your clientarea](https://panel.hostingby.design/clientarea.php?action=services) and click on your service:
+First off, [login to your clientarea](https://my.hostingby.design/clientarea.php?action=services) and click on your service:
 
 ![](http://i.imgur.com/RmoPc8Y.png)
 
@@ -18,7 +18,7 @@ From here, you will have a dropdown menu, where you can pick from the plans avai
 
 ![](http://i.imgur.com/TuFj6BP.png)
 
-After this, you are forwarded to a payment page, with an invoice generated, the invoice will only be for the difference between the two plans for the remaining billing period, once this invoice is paid the seedbox is automatically upgraded.
+After this, you are forwarded to a payment page, with an invoice generated, the invoice will only be for the difference between the two plans for the remaining billing period, once this invoice is paid the seedbox is automatically upgraded.
 
 A few things to note here;
 
