--- a/docs/shared-storage/troubleshooting/reroute.mdx
+++ b/docs/shared-storage/troubleshooting/reroute.mdx
@@ -6,7 +6,7 @@ sidebar_label: Reroute data (NFOrce)
 
 If you are experiencing slow FTP speeds to your home PC, there could be loss somewhere along the line. This guide will show you how to setup a reroute,
 
-[Login to your clientarea](https://panel.hostingby.design/clientarea.php?action=services) and click on the "Services" tab at the top bar:
+[Login to your clientarea](https://my.hostingby.design/clientarea.php?action=services) and click on the "Services" tab at the top bar:
 
 ![](https://i.imgur.com/X3UTnMt.png)
 
@@ -18,7 +18,7 @@ Once you are logged in there, you are presented with the upstream providers that
 
 ![](https://i.imgur.com/9Njl5HH.png)
 
-It is important to note that to get the most optimal re-route (Without testing) it is adviceable to lookup your internet provider on BGP.he on this link; https://bgp.he.net/
+It is important to note that to get the most optimal re-route (Without testing) it is adviceable to lookup your internet provider on BGP.he on this link: https://bgp.he.net/
 
 Picking the most direct path is important, so a sample output from the provider "Comcast" is here;
 
