--- a/docs/appslots/applications/jellyfin.mdx
+++ b/docs/appslots/applications/jellyfin.mdx
@@ -40,4 +40,4 @@ Jellyfin has a general [Troubleshooting guide](https://jellyfin.org/docs/general
 
 If you recently reinstalled Jellyfin, you may need to clear your cookies and cache for your appbox url to properly access the web interface.
 
-If all else fails, consider putting in a [ticket](https://panel.hostingby.design/submitticket.php?step=2&deptid=2).
+If all else fails, consider putting in a [ticket](https://my.hostingby.design/submitticket.php?step=2&deptid=2).
