docs(pre-sales): update dedicated ip

--- a/docs/pre-sales/dedicated-ip.mdx
+++ b/docs/pre-sales/dedicated-ip.mdx
@@ -4,6 +4,6 @@ title: Can I have a dedicated IP?
 sidebar_label: Dedicated IP
 ---
 
-Dedicated IP is available in our NL and RO locations, it is not possible to have a dedicated IP if you are hosting in France, should you wish to have a dedicated IP for your seedbox, simply put in a support ticket after you have purchased the seedbox and we will provide it for you, if you are hosted in France we can easily move you to a server in NL or RO and apply the dedicated IP for you.
+To get a dedicated IP you'd have to opt for a VPS/Dedicated server from us, our shared application hosting packages will not offer this feature.
 
-The monthly fee for a dedicated IP is: **€2**
+On VPS/Dedicated a dedicated IP is included by default.
