--- a/docs/pre-sales/refund.mdx
+++ b/docs/pre-sales/refund.mdx
@@ -1,10 +1,10 @@
 ---
 id: refund
-title: Refund policy - 14 day 100% moneyback guarantee
+title: Refund policy - 14 day refund period
 sidebar_label: Refund policy
 ---
 
-All new clients are welcome to test our services for up to 14 days 100% riskfree, we will issue a full refund in case the service does not live up to the expectations.
+All new clients are welcome to **test\*\*\*** our services for up to 14 days 100% riskfree (One (1) refund per customer account is allowed).
 
 NOTE: This does not cover customized dedicated offerings, the plans available on the website are covered but anything outside of that will not be.
 
@@ -12,6 +12,7 @@ Do note, we would naturally very much like to solve any issues, so please submit
 
 All refund requests must be dealt with by contacting our billing department via our ticket system.
 
-\*Refunds for payments done via crypto is currently not supported.
+- `*` Refunds for payments done via crypto is currently not supported.
+- `**` In case of AUP violations, any and all refunds are forfeit.
+- `***` **Tests are deemed within 14 days, with a maximum of 1TB of data transferred in/out from the service in question, this should provide enough time/throughput to get a solid feel for whether the service is a good fit or not, have you used more than the 1TB data then you are not entitled to a refund.**
 
-\*\*In case of AUP violations, any and all refunds are forfeit.
