docs(app): update getting started

--- a/docs/appslots/getting-started/bandwith.mdx
+++ b/docs/appslots/getting-started/bandwith.mdx
@@ -3,12 +3,17 @@ id: bandwith
 title: Bandwidth explanation
 sidebar_label: Bandwidth explanation
 ---
+
 Each of our packages come with a predefined amount of upload traffic, how much included traffic is mentioned on each individual product - We only count outgoing data, but there are some few protocols that are exempt from the usage.
+
 1. FTP/FTPS (All data sent to your home via FTP)
 2. HTTPS transfers to your home
 3. All media servers (PLEX, Emby, Jellyfin)
+
 The above 3 items do not count in your usage, all other outgoing data will count, this includes all torrent uploads, usenet uploads, rclone uploads cloud storage vendors etc.
-:::warning
+
+:::caution
 If you hit the limit on your package then the outgoing network speed will be throttled to 10Mbit!
 :::
+
 Should you have any questions on this, then please open a ticket!
