docs: add link to product addons

--- a/docs/appslots/getting-started/bandwith.mdx
+++ b/docs/appslots/getting-started/bandwith.mdx
@@ -24,4 +24,6 @@ If you have exceeded your included bandwidth you can buy extra. We offer the fol
 * 5TB = €5
 * 10TB = €10
 
+You can find these on the [Product Addons page](https://my.hostingby.design/cart.php?gid=addons).
+
 Should you have any questions on this, then please open a ticket!
