--- a/docs/appslots/getting-started/bandwith.mdx
+++ b/docs/appslots/getting-started/bandwith.mdx
@@ -16,4 +16,14 @@ The above 3 items do not count in your usage, all other outgoing data will count
 If you hit the limit on your package then the outgoing network speed will be throttled to 10Mbit!
 :::
 
+## Extra bandwidth
+
+If you have exceeded your included bandwidth you can buy extra. We offer the following packages:
+
+* 2TB = €2.5
+* 5TB = €5
+* 10TB = €10
+
+You can find these on the [Product Addons page](https://my.hostingby.design/cart.php?gid=addons).
+
 Should you have any questions on this, then please open a ticket!
