docs(application): rename appslots

--- a/docs/pre-sales/support-scope.mdx
+++ b/docs/pre-sales/support-scope.mdx
@@ -6,7 +6,7 @@ sidebar_label: Support scope
 
 We've been asked a lot of questions about what we provide support with, we've written this overview to avoid any confusion.
 
-## App slots
+## Application hosting
 
 On our application hosting and dedicated servers with application suite we provide support for situations like below :
 
@@ -16,7 +16,7 @@ On our application hosting and dedicated servers with application suite we provi
 - Any service related issues/questions, like fx bandwidth allocations not being reset, password reset requests, general questions about the service
 - Any hardware related issues you might be facing
 
-## Bare metal
+## Dedicated servers
 
 For bare metal dedicated servers we also provide assistance in these areas.
 
