--- a/docs/dedicated-servers/getting-started/leaseweb-reinstall.mdx
+++ b/docs/dedicated-servers/getting-started/leaseweb-reinstall.mdx
@@ -27,7 +27,7 @@ On here, you will be able to specify the Operating system etc. for your installa
 
 Operating System:
 
-1. For the OS Image, select the OS you wish to install, for example CentOS 7 or Debian 11.
+1. For the OS Image, select the OS you wish to install, for example Ubuntu 22.04 or Debian 11.
 
 2. The password field can be left blank so the installation will generate a password for you, or you can specify your own Root password the installation will use.
 
