--- a/docs/dedicated-servers/getting-started/leaseweb-reinstall.mdx
+++ b/docs/dedicated-servers/getting-started/leaseweb-reinstall.mdx
@@ -1,7 +1,7 @@
 ---
-id: "how-to: leaseweb reinstall"
-title: "How-to: Leaseweb Reinstall"
-sidebar_label: "How-to: Leaseweb Reinstall"
+id: how-to: leaseweb reinstall
+title: How-to: Leaseweb Reinstall
+sidebar_label: How-to: Leaseweb Reinstall
 ---
 
 This tutorial will go over how to reinstall a Leaseweb reinstall with a barebones OS, for example Debian 11 or Ubuntu 22.04. If you require the Swizzin Application Hosting package, please reach out to us via a [Ticket](https://my.hostingby.design/submitticket.php).
